snapshot-tests/tests/snapshots/parser__bad_floats__trailing_neg.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidFloat]: invalid float at a
  ┌─ trailing_neg:1:5
  │
1 │ a = 0.0e-
  │     ^ invalid float
